fix: error message

--- a/layouts/partials/mod-resource/func/get-with-params.html
+++ b/layouts/partials/mod-resource/func/get-with-params.html
@@ -7,7 +7,7 @@
 
 {{- $map := "" }}
 {{- if $url.IsAbs }} {{- /* Remote */}}
-    {{- $errorMsg := printf "Unable to resolve the resource %q" $url.String }}
+    {{- $errorMsg := printf "Unable to resolve the resource %q." $url.String }}
     {{- with resources.GetRemote $url.String }}
         {{- with .Err }}
             {{- $msg := print $errorMsg ". " . }}
